--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "devhub/deleteorder",
+    "name": "devhub/delete-order",
     "description": "Delete Order extension for Magento 2 has been developed by the product team at PHP Studios. ",
     "require": {
         "php": ">=7.1.0",
